--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VZENE656SG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-VZENE656SG');
+</script>
+  
 <body>
 
   <!-- ======= Header ======= -->
